# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  run.sh
shader/: program.metal
src/: Utility.hpp  app_delegate.cpp  app_delegate.hpp  app_delegate.mm  controller.hpp  controller.mm  event_handler.cpp  event_handler.hpp  game_controller.cpp  game_controller.h  game_controller.hpp  game_controller.m  game_controller.mm  keys_code.h  keys_code.mm  main.cpp  math.cpp  math.hpp  renderer.cpp  renderer.hpp  renderer.mm  utility.cpp  view_delegate.cpp  view_delegate.hpp
